--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -2,6 +2,9 @@
   margin: 50px 0;
   .card {
     margin: 0 2% !important;
+    @media (max-width: 770px) {
+      margin: 2% 0 !important;
+    }
   }
   .infected {
     border-bottom: 10px solid rgba(0, 0, 255, 0.5);
