refactoring Card.js use map()

--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -6,7 +6,7 @@
       margin: 2% 0 !important;
     }
   }
-  .infected {
+  .confirmed {
     border-bottom: 10px solid rgba(0, 0, 255, 0.5);
   }
   .recovered {
